<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20sp">

    <TextView
        android:id="@+id/userNeedsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_needs"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/userNeedsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_needs_input_hint"
        android:autofillHints=""
        android:inputType="text"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/sendAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="send to all users"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/sendToPartner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="send to user with token"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/partnerNeedsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/partner_needs"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/partnerToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/partners_token"
        android:autofillHints=""
        android:inputType="text"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/getUserToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_user_token"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/userToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        app:drawableRightCompat="?attr/actionModeCopyDrawable" />

</LinearLayout>